# bank-dal/src/main/java/com/awesome/bank/dal/entity/OperationEntity.java
@@ -23,6 +23,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
+import org.springframework.data.annotation.CreatedBy;
 import org.springframework.data.annotation.CreatedDate;
 import org.springframework.format.annotation.DateTimeFormat;
 
@@ -66,4 +67,6 @@ public class OperationEntity implements Serializable {
     // @CreationTimestamp
     private OffsetDateTime createdAt;
 
+    @CreatedBy
+    private String createdBy;
 }
