# bank-domain/src/main/java/com/awesome/bank/domain/model/Account.java
@@ -38,6 +38,8 @@ public class Account {
 
     private Instant latestUpdateDate;
 
+    private String createdBy;
+
     private Long version;
 
     private List<Operation> operations;
