# bank-domain/src/main/java/com/awesome/bank/domain/model/Operation.java
@@ -23,4 +23,6 @@ public class Operation {
     private Account account;
 
     private OffsetDateTime createdAt;
+
+    private String createdBy;
 }
