# bank-security/src/main/java/com/awesome/bank/security/api/model/AuthenticationRequest.java
@@ -1,0 +1,16 @@
+package com.awesome.bank.security.api.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class AuthenticationRequest {
+
+  private String username;
+  private String password;
+}
