# bank-security/src/main/java/com/awesome/bank/security/api/model/AuthenticationResponse.java
@@ -1,0 +1,17 @@
+package com.awesome.bank.security.api.model;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class AuthenticationResponse {
+
+  @JsonProperty("access_token")
+  private String accessToken;
+}
